--- a/templates/base.html
+++ b/templates/base.html
@@ -1,46 +1,50 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale= 1.0">
-    <title>{% block title %} Personal Finance Tracker {% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Finance Tracker</title>
+    <!-- Favicon link added here -->
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.jpeg' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <nav>
-        <div class="container">
-            <div>
-                <a href="{% url 'dashboard' %}">Home</a>
+    <header class="navbar">
+        <div class="logo">
+            <a href="{% url 'dashboard' %}">Finance Tracker</a>
+        </div>
+        <nav>
+            <ul>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'transaction_list' %}">Transactions</a>
-                    <a href="{% url 'category_list' %}">Categories</a>
-                {% endif %}
-            </div>
-            <div>
-                {% if user.is_authenticated %}
-                    <span>Hello, {{ user.username }}!</span>
+                <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
+                <li><a href="{% url 'transaction_list' %}">Transactions</a></li>
+                <li><a href="{% url 'category_list' %}">Categories</a></li>
+                <li>
                     <form action="{% url 'logout' %}" method="post">
                         {% csrf_token %}
-                        <button type="submit">Logout</button>
+                        <button type="submit" class="logout-btn">Logout</button>
                     </form>
+                </li>
                 {% else %}
-                    <a href="{% url 'login' %}">Login</a>
-                    <a href="{% url 'register' %}">Register</a>
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'register' %}">Sign Up</a></li>
                 {% endif %}
-            </div>
+            </ul>
+        </nav>
+        {% if user.is_authenticated %}
+        <div class="user-info">
+            <p>Hello, {{ user.username }}!</p>
         </div>
-    </nav>
-    <main class="container">
-        {% block content %}
-        {% endblock %}
-    </main>
+        {% endif %}
+    </header>
 
-    <footer>
-        <div class="container">
-            <p>&copy; Fred Kaloki, Personal Finance Tracker</p>
-        </div>
+    <div class="main-content">
+        {% block content %}{% endblock %}
+    </div>
+
+    <footer class="footer">
+        <p>&copy; 2025 Personal Finance Tracker. All rights reserved.</p>
     </footer>
 </body>
 </html>
