--- a/templates/category_list.html
+++ b/templates/category_list.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
-{% block title %}Categories{% endblock %}
 
 {% block content %}
-<h1>Categories</h1>
-<a href="{% url 'category_create' %}">Add New Category</a>
-
-{% if categories %}
+<div class="container category-list-container">
+    <h2>Categories</h2>
+    <a href="{% url 'category_create' %}" class="add-link">Add New Category</a>
     <ul>
         {% for category in categories %}
         <li>
-            {{category.name}}
-            <a href="{% url 'category_update' category.pk %}">Edit</a>
-            <a href="{% url 'category_delete' category.pk %}">Delete</a>
+            <div class="category-details">
+                <span class="name">{{ category.name }}</span>
+            </div>
+            <div class="category-actions">
+                <a href="{% url 'category_update' pk=category.pk %}">Edit</a>
+                <a href="{% url 'category_delete' pk=category.pk %}">Delete</a>
+            </div>
         </li>
+        {% empty %}
+        <li>No categories found.</li>
         {% endfor %}
     </ul>
-{% else %}
-    <p>No categories found.</p>
-{% endif %}
+</div>
 {% endblock %}
